src/styles/global.css
@import 'tailwindcss';
@import './prism.css' layer(components);

@config '../../tailwind.config.ts';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@utility link-hover {
  @apply hover:text-teal-500 dark:hover:text-teal-400;
}

@layer utilities {
  /* Styles the main scrollbar track */
  ::-webkit-scrollbar {
    width: 4px; /* Width of the scrollbar */
    height: 4px;
  }

  /* Styles the scrollbar handle */
  ::-webkit-scrollbar-thumb {
    background: rgb(128, 128, 128);
    border-radius: 7.5px; /* Makes the thumb rounded */
  }

  /* Styles the scrollbar track */
  ::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0); /* Black background for the track */
    border-radius: 7.5px; /* Makes the track rounded */
  }

  /* Handle on hover - making it a bit lighter to simulate hover effect */
  ::-webkit-scrollbar-thumb:hover {
    background: rgb(128, 128, 128);
  }

  html,
  body {
    max-width: 100%;
    overflow-x: hidden;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

@layer components {
  .dark .FeedItem_container {
    .d-flex {
      border: 1px rgba(255, 255, 255, 0.1) solid;
      border-radius: 8px;
    }

    .avatar-user {
      border: 2px solid #e0e0e0;
    }

    .color-shadow-medium {
      border: 1px rgba(255, 255, 255, 0.1) solid;
    }

    .Box {
      border: 1px rgba(255, 255, 255, 0.1) solid;
    }
  }

  .FeedItem_container {
    ul.list-style-none {
      margin-top: 2px;
    }

    li {
      margin-bottom: 8px;
    }

    .color-fg-muted {
      display: flex;
      flex-direction: column;
    }

    .d-flex {
      display: flex;
      padding: 10px;
      border: 1px rgba(0, 0, 0, 0.1) solid;
      border-radius: 8px;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
      white-space: nowrap;
      overflow: auto;
      text-overflow: ellipsis;
    }

    .d-flex.flex-column.width-full {
      border: none;
      box-shadow: none;
    }

    .flex-items-baseline {
      align-items: baseline;
      white-space: nowrap;
      overflow: auto;
      text-overflow: ellipsis;
    }

    .flex-column {
      flex-direction: column;
    }

    .width-full {
      width: 100%;
      max-width: 303px;
    }

    .list-style-none {
      & .d-flex.flex-items-baseline {
        flex-direction: column;

        & span,
        img,
        a {
          display: none;
        }
      }
    }

    .avatar-user {
      border-radius: 50%;
      border: 2px solid #e0e0e0;
    }

    .Link--primary {
      color: rgb(20, 184, 166);
      text-decoration: none;
    }

    .Link--primary:hover {
      text-decoration: underline;
    }

    .Link--muted {
      color: rgb(20, 184, 166);
      text-decoration: none;
    }

    .Link--muted:hover {
      text-decoration: underline;
    }

    .Box {
      border-radius: 8px;
      margin-top: 10px;
      padding: 15px;
      border: 1px rgba(0, 0, 0, 0.1) solid;
      white-space: nowrap;
      overflow: auto;
      text-overflow: ellipsis;
    }

    .color-shadow-medium {
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    }

    .repo-language-color {
      border-radius: 50%;
      width: 10px;
      height: 10px;
      display: inline-block;
      vertical-align: middle;
      margin-right: 5px;
    }

    blockquote {
      display: inline;
    }

    .mr-2 {
      margin-right: 8px;
    }

    .py-4 {
      padding: 16px 0;
    }

    .mr-3 {
      margin-right: 12px;
    }

    .mt-1 {
      margin-top: 4px;
    }
  }
}

